--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,3 @@
-title: Tactile theme
-description: Tactile is a theme for GitHub Pages.
-show_downloads: true
-google_analytics:
+title: Nicholas Reardon
+description: nicholas@reardonusa.com
 theme: jekyll-theme-tactile
